# prchart

./: .gitignore  pyproject.toml
src/prchart/: __init__.py  bind.py  chart.py  geometry.py
src/prchart/plot/: __init__.py
src/prchart/style/: __init__.py  chart_style.py
src/prplot/: __init__.py  bind.py  chart.py  plot.py
src/prplot/plot/: __init__.py
src/prplot/style/: chart_style.py  grayscale.py
tests/: test_bind.py  test_geometry.py  test_jupyter.ipynb  test_prplot.py
tests/fixtures/: dataset.py
